--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+
+$backround_color:#FFFCF3;
+
+body{
+    background-color: $backround_color;
+    margin: 0;
+}
+
+@font-face {
+    font-family: 'syne'; // Replace with the font's name
+    src: url('assets/fonts/syne.woff2') format('woff2');
+  }
+  
+  @font-face {
+    font-family: 'syne800'; // Replace with the font's name
+    src: url('assets/fonts/syne-800.woff2') format('woff2');
+  }
+
+  @font-face {
+    font-family: 'overpass'; // Replace with the second font's name
+    src: url('assets/fonts/overpass.woff2') format('woff2');
+  }
+  
