added images and favicon, final style for about-me component

--- a/src/app/about-me/about-me/about-me.component.html
+++ b/src/app/about-me/about-me/about-me.component.html
@@ -2,9 +2,9 @@
   <div>
     <h1>About me</h1>
   </div>
-  <div>
+  <div class="about-me-content">
     <div>
-      <div>
+      <div class="about-me-paragraph">
         <p>
           I’m an aspiring Front-End Developer with a passion for creating
           responsive, user-friendly, and visually appealing websites. I enjoy
@@ -13,22 +13,22 @@
           of help for your projects, contact me!
         </p>
       </div>
-      <div>
-        <div>
+      <div class="about-me-sub-content">
+        <div class="about-me-based">
           <img src="./../../../assets/about-me-house.png" alt="" />
           <p>Based in Berlin</p>
         </div>
-        <div>
+        <div class="about-me-remote">
           <img src="./../../../assets/about-me-laptop.png" alt="" />
           <p>Open to work Remote</p>
         </div>
       </div>
-      <div>
-        <button>Let`s Talk</button>
+      <div class="about-me-btn-div">
+        <button>Let's Talk</button>
       </div>
     </div>
-    <div>
-      <img src="" alt="" />
+    <div class="image-container">
+      <img class="personal-img" src="./../../../assets/personalimg.png" alt="" />
     </div>
   </div>
 </div>
