--- a/src/app/about-me/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me/about-me.component.scss
@@ -1,14 +1,120 @@
+@import "../../../styles.scss";
+
 .about-me-main {
-    width: 100%;
-    max-width: 1240px;
-    margin: 0 auto; 
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: flex-start;
+  width: 100%;
+  height: 100vh;
+  max-width: 1259px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-h1{
-    font-family: 'syne800';
-    font-size: 78px;
+.about-me-content {
+  display: flex;
+  max-width: 1259px;
+  width: 100%;
+  justify-content: space-between;
 }
+
+.about-me-paragraph {
+  width: 612px;
+  font-family: "overpass";
+  font-size: 22px;
+  padding-bottom: 36px;
+  > p {
+    margin: 0;
+  }
+}
+
+.about-me-based {
+  display: flex;
+  font-family: "overpass";
+  font-size: 22px;
+  align-items: center;
+  padding-bottom: 24px;
+  > img {
+    padding-right: 16px;
+    width: 36.66666793823242px;
+    height: 28.33px;
+  }
+  > p {
+    margin: 0;
+  }
+}
+
+.about-me-remote {
+  display: flex;
+  font-family: "overpass";
+  font-size: 22px;
+  align-items: center;
+  padding-bottom: 24px;
+  > img {
+    padding-right: 16px;
+    width: 36.66666793823242px;
+    height: 28.33px;
+  }
+  > p {
+    margin: 0;
+  }
+}
+
+.about-me-btn-div {
+  padding-top: 36px;
+  display: flex;
+  justify-content: center;
+  > button {
+    background-color: $backround_color;
+    cursor: pointer;
+    font-family: "overpass";
+    font-size: 23px;
+    width: 213px;
+    height: 68px;
+    outline: 4px solid black;
+    border: none;
+    transition: all 0.2s ease;
+    &:hover {
+        width: 250px;
+        height: 70px;
+        font-weight: bold;
+      }
+  }
+}
+
+h1 {
+  font-family: "syne800";
+  font-size: 78px;
+  &:hover {
+    color: $highlight_color;
+  }
+}
+
+.personal-img {
+  width: 533px;
+}
+.image-container {
+    position: relative; 
+    display: inline-block; 
+  }
+  
+  .image-container img {
+    display: block; 
+  }
+  
+  .image-container::after {
+    content: '';
+    position: absolute;
+    top: 16px; 
+    left: 16px; 
+    right: -16px; 
+    bottom: -16px;
+    border: 4px solid rgb(0, 0, 0); 
+    opacity: 0; 
+    transition: opacity 0.3s ease; 
+    pointer-events: none; 
+  }
+  
+  .image-container:hover::after {
+    opacity: 1; 
+  }
