--- a/src/app/atf/atf/atf.component.scss
+++ b/src/app/atf/atf/atf.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles.scss';
+
 .atf-main {
   display: flex;
   width: 100%;
@@ -42,7 +44,7 @@
     width: 673px;
   }
   > h2 {
-    color: #00bc8f;
+    color: $highlight_color;
     font-family: "overpass";
     font-size: 48px;
     width: 346px;
