implemented arrow section with animation

--- a/src/app/about-me/about-me/about-me.component.html
+++ b/src/app/about-me/about-me/about-me.component.html
@@ -31,4 +31,8 @@
       <img class="personal-img" src="./../../../assets/personalimg.png" alt="" />
     </div>
   </div>
+  <div class="arrow-div">
+    <app-arrow-section></app-arrow-section>
+  </div>
 </div>
+
