added my skills section, animation for scroll arrow, new font overpass700

--- a/src/app/atf/atf/atf.component.html
+++ b/src/app/atf/atf/atf.component.html
@@ -14,7 +14,7 @@
             <p>niklas.lampe00&#64;gmail.com</p>
         </div>
         <div class="atf-arrow">
-            <img src="./../../../assets/scroll-arrow/scroll-arrow3.png" alt="">
+            <img class="animated-arrow" [src]="currentImage" alt="">
             <p>Scroll <br> Down</p>
         </div>
     </div>
