--- a/src/app/about-me/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me/about-me.component.scss
@@ -2,8 +2,8 @@
 
 .about-me-main {
   width: 100%;
-  height: 100vh;
   max-width: 1259px;
+  padding-top: 100px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -73,9 +73,9 @@
     height: 68px;
     outline: 4px solid black;
     border: none;
-    transition: all 0.2s ease;
+    transition: all 0.1s ease;
     &:hover {
-        width: 250px;
+        width: 260px;
         height: 70px;
         font-weight: bold;
       }
