--- a/src/app/arrow-section/arrow-section.component.scss
+++ b/src/app/arrow-section/arrow-section.component.scss
@@ -3,11 +3,12 @@
     max-width: 1259px;
     margin: 0 auto;
     display: flex;
-    padding-top: 80px;
+    padding-top: 10px;
     justify-content: flex-end;
     height: 300px;
   }
   
   img {
     transition: opacity 0.3s ease-in-out; 
+    cursor: pointer;
   }
