--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,3 +1,4 @@
+<div class="skills-arrow-div">
 <div class="skills-main">
   <h1>My Skills</h1>
   <div class="skills-content">
@@ -71,4 +72,8 @@
       </div>
     </div>
   </div>
+</div>
+<div class="arrow-div">
+  <app-arrow-section class="arrow-sec"></app-arrow-section>
+</div>
 </div>
