--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-atf></app-atf>
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
+<app-projects></app-projects>
 <router-outlet></router-outlet>
