--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,6 @@
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
 <app-projects></app-projects>
+<app-references></app-references>
+<app-contact></app-contact>
 <router-outlet></router-outlet>
