--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -6,8 +6,8 @@ h1 {
   padding: 0;
   margin: 0;
   background-color: $backround_color;
-  position: relative; // Add relative positioning
-  z-index: 1; // Ensure it appears above the outline
+  position: relative; 
+  z-index: 1; 
   &:hover {
     color: $highlight_color;
   }
