--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 <app-projects></app-projects>
 <app-references></app-references>
 <app-contact></app-contact>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
