started implementing the extended header

--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -1,6 +1,6 @@
 <div class="skills-arrow-div">
-<div class="skills-main">
-  <h1>My Skills</h1>
+<div  class="skills-main">
+  <h1  >My Skills</h1>
   <div class="skills-content">
     <div class="skills-icons">
       <div class="skills-row-one">
@@ -74,6 +74,6 @@
   </div>
 </div>
 <div class="arrow-div">
-  <app-arrow-section class="arrow-sec"></app-arrow-section>
+  <app-arrow-section id="projects" class="arrow-sec"></app-arrow-section>
 </div>
 </div>
