--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about-me-main">
+<div id="about-me" class="about-me-main">
   <div>
     <h1>About me</h1>
   </div>
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="arrow-div">
-    <app-arrow-section></app-arrow-section>
+    <app-arrow-section id="skills"></app-arrow-section>
   </div>
 </div>
 
