--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,28 +26,24 @@
   >
     <div class="extended-body">
       <div class="extended-links">
-        <a  href="/target-url" 
-        (click)="onLinkClick($event)" 
-        [routerLink]="['/target-url']"
-        [routerLinkActive]="'active-link'">About me</a>
-        <a  href="/target-url" 
-        (click)="onLinkClick($event)" 
-        [routerLink]="['/target-url']"
-        [routerLinkActive]="'active-link'">My skills</a>
-        <a  href="/target-url" 
-        (click)="onLinkClick($event)" 
-        [routerLink]="['/target-url']"
-        [routerLinkActive]="'active-link'">Portfolio</a>
+        <a href="#about-me">About me</a>
+        <a href="#skills">My skills</a>
+        <a href="#projects">Portfolio</a>
       </div>
-      <div>
-        <div>
-          <h1>Title</h1>
-          <p>Description</p>
-        </div>
-        <div>
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+      <div class="header-black">
+        <div class="gradient-div"></div>
+        <div class="header-bottom">
+          <div class="bottom-content">
+            <div>
+              <h1>Say Hi!</h1>
+              <p>niklas.lampe00&#64;gmail.com</p>
+            </div>
+            <div class="icons">
+              <img class="icon" src="./../../../assets/linkedin.png" alt="" />
+              <img class="icon" src="./../../../assets/mail.png" alt="" />
+              <img class="icon" src="./../../../assets/github.png" alt="" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
