--- a/src/app/atf/atf.component.html
+++ b/src/app/atf/atf.component.html
@@ -2,7 +2,7 @@
     <div class="h1-div">
         <div class="caption-div">
             <h1>Frontend</h1>
-            <h1>Developer</h1>
+            <h1>{{ role }}</h1> 
         </div>
         <div class="subcaption-div">
             <span></span>
@@ -15,7 +15,7 @@
         </div>
         <div class="atf-arrow">
             <img class="animated-arrow" [src]="currentImage" alt="">
-            <p>Scroll <br> Down</p>
+            <p>{{ scrollText }}</p>
         </div>
     </div>
 </div>
