--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,16 +1,17 @@
 <footer>
     <div>
-        <div class="left-logos">
-            <img class="logo" src="./../../../assets/logowhite.png" alt="">
-            <p>© Niklas Lampe 2025</p>
+      <div class="left-logos">
+        <img class="logo" src="./../../../assets/logowhite.png" alt="">
+        <p>© Niklas Lampe 2025</p>
+      </div>
+      <div class="right-logos">
+        <div class="icons">
+          <img class="icon" src="./../../../assets/github.png" alt="">
+          <img class="icon" src="./../../../assets/linkedin.png" alt="">
+          <img class="icon" src="./../../../assets/mail.png" alt="">
         </div>
-        <div class="right-logos">
-            <div class="icons">
-                <img class="icon" src="./../../../assets/github.png" alt="">
-                <img class="icon" src="./../../../assets/linkedin.png" alt="">
-                <img class="icon" src="./../../../assets/mail.png" alt="">
-            </div>
-            <a href="">Legal notice</a>
-        </div>
+        <a href="">{{ imprintText }}</a>
+      </div>
     </div>
-</footer>
+  </footer>
+  
