--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,62 +1,60 @@
-<div class="arrow-div">
-    <app-arrow-section class="arrow-sec"></app-arrow-section>
+<div class="arrow-div" id="contact">
+  <app-arrow-section class="arrow-sec"></app-arrow-section>
 </div>
 <div class="gradient-div">
-
 </div>
-<form #contactForm="ngForm" (ngSubmit)="onSubmit(contactForm)" class="contact-form">
-    <div class="h1-div">
-      <h1>Say Hi!</h1>
-    </div>
+
+<form #contactForm="ngForm" id="contact" (ngSubmit)="onSubmit(contactForm)" class="contact-form">
+  <div class="h1-div">
+    <h1>{{ h1Text }}</h1>
+  </div>
+  <div>
     <div>
-      <div>
-        <h2>Want to discuss a new project?</h2>
-        <h3>Say hello! let's discuss your ideas and make it happen</h3>
+      <h2>{{ h2Text }}</h2>
+      <h3>{{ h3Text }}</h3>
+    </div>
+    <div class="input-div">
+      <input 
+        placeholder="{{ placeholders.name }}" 
+        type="text" 
+        name="name" 
+        ngModel
+        required />
+      <input 
+        placeholder="{{ placeholders.email }}" 
+        type="email" 
+        name="email" 
+        ngModel
+        #email="ngModel" 
+        required 
+        email />
+      <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error-message">
+        <p *ngIf="email.errors?.['required']">{{ errorMessages.required }}</p>
+        <p *ngIf="email.errors?.['email']">{{ errorMessages.email }}</p>
       </div>
-      <div class="input-div">
+      <textarea 
+        placeholder="{{ placeholders.message }}" 
+        name="message" 
+        ngModel
+        required></textarea>
+
+      <div class="check-div">
         <input 
-          placeholder="Your name" 
-          type="text" 
-          name="name" 
+          class="checkbox" 
+          type="checkbox" 
+          name="acceptTerms"
           ngModel
           required />
-          <input 
-          placeholder="Your email" 
-          type="email" 
-          name="email" 
-          ngModel
-          #email="ngModel" 
-          required 
-          email />
-        <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error-message">
-          <p *ngIf="email.errors?.['required']">Email is required.</p>
-          <p *ngIf="email.errors?.['email']">Please enter a valid email address.</p>
-        </div>
-        <textarea 
-          placeholder="Your message" 
-          name="message" 
-          ngModel
-          required></textarea>
-  
-        <div class="check-div">
-          <input 
-            class="checkbox" 
-            type="checkbox" 
-            name="acceptTerms"
-            ngModel
-            required />
-          <p>I've read the <a href="">privacy policy</a> and agree to the processing of my data outlined.</p>
-        </div>
+        <p [innerHTML]="privacyText"></p>
       </div>
-      <div class="bottom-div">
-        <div class="button-container">
-            <button type="submit" [disabled]="!contactForm.valid">Send message</button>
-        </div>
-        <img (click)="scrollToTop()" class="scroll-up-img" src="./../../assets/scroll-up-arrow/scroll-up-arrow-def.png" alt="Scroll Up Arrow">
     </div>
-    
+    <div class="bottom-div">
+      <div class="button-container">
+        <button type="submit" [disabled]="!contactForm.valid">{{ buttonText }}</button>
+      </div>
+      <img (click)="scrollToTop()" class="scroll-up-img" src="./../../assets/scroll-up-arrow/scroll-up-arrow-def.png" alt="Scroll Up Arrow">
     </div>
-   
-  </form>
+  </div>
+</form>
 
   
