implemented privacy and imprint

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
 <app-header></app-header>
-<app-atf></app-atf>
-<app-about-me></app-about-me>
-<app-my-skills></app-my-skills>
-<app-projects></app-projects>
-<app-references></app-references>
-<app-contact></app-contact>
+<router-outlet>
+</router-outlet>
 <app-footer></app-footer>
+
+
 
