--- a/src/app/projects/single-project/single-project.component.html
+++ b/src/app/projects/single-project/single-project.component.html
@@ -12,6 +12,7 @@
       <p>{{ projectDescription }}</p>
       <div class="btn-div">
         <button>Github</button>
+        <button>Live Test</button>
       </div>
     </div>
   </div>
