--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div>
       <div class="left-logos">
-        <img class="logo" src="./../../../assets/logowhite.png" alt="">
+        <a href=""><img class="logo" src="./../../../assets/logowhite.png" alt=""></a>
         <p>© Niklas Lampe 2025</p>
       </div>
       <div class="right-logos">
@@ -10,7 +10,7 @@
           <img class="icon" src="./../../../assets/linkedin.png" alt="">
           <img class="icon" src="./../../../assets/mail.png" alt="">
         </div>
-        <a href="">{{ imprintText }}</a>
+        <a [href]="getImprintUrl()" target="_blank" rel="noopener noreferrer">{{ imprintText }}</a>
       </div>
     </div>
   </footer>
